* Customizing the site title * Customizing the site logo * Customizing the page title of every page; appending the site name to each page title * Reducing the font size of the tab text to 20px

--- a/templates/theme484/css/template.css
+++ b/templates/theme484/css/template.css
@@ -802,25 +802,25 @@ ul.tabs li a {
 	height:37px;
 	text-align:center;
 	display:inline-block;
-	font-size:24px;
+	font-size:20px; /* MG */
 	padding:19px 0 0 0;
 	text-decoration:none
 }
 ul.tabs li a:hover {
 	background:url(../images/tab_act.gif) no-repeat left top;
 	color:#f3ca02 !important;
-	font-size:24px !important;
+	font-size:20px !important; /* MG */
 
 }
 .active a { /*--Makes sure that the active tab does not listen to the hover properties--*/
 	background:url(../images/tab_act.gif) no-repeat left top !important;
 	color:#f3ca02 !important;
-	font-size:24px !important;
+	font-size:20px !important; /* MG */
 }
 .active a:hover { /*--Makes sure that the active tab does not listen to the hover properties--*/
 	background:url(../images/tab_act.gif) no-repeat left top !important;
 	color:#f3ca02 !important;
-	font-size:24px !important;
+	font-size:20px !important; /* MG */
 	line-height:18px !important
 }
 
